Changed "Questions" to "Matching" and fixed layout problem for creating events.

--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -71,7 +71,7 @@ $grayLighter: #eaeaea;
 }
 
 .dateselector {
-  margin-top: -28px;
+  margin-top: 0px;
   margin-left: 120px;
 }
 
